--- a/style.css
+++ b/style.css
@@ -125,119 +125,138 @@ body{
 .location-not-found img{
     width: 80%;
 }
-@media only screen and (max-width:600px) {
-    body{
-        min-height: 75vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #000;
+
+    @media only screen and (max-width: 600px) {
+        body {
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000;
+        }
     
+        .container {
+            width: 90%; 
+            max-width: 400px; 
+            background-color: #fff;
+            border-radius: 12px;
+            padding: 20px; 
+        }
+    
+        .search-box {
+            width: 100%;
+            height: min-content;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+    
+        .search-box input {
+            width: 80%; 
+            font-size: 17px;
+            text-transform: capitalize;
+            color: #000;
+            background-color: #e6f5fb;
+            padding: 12px 16px;
+            border-radius: 14px;
+        }
+    
+        .search-box button {
+            width: 40px; /* Adjust the button size */
+            height: 40px;
+            background-color: #e6f5fb;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 20px;
+            margin-right: -14px; /* Adjust the margin for button alignment */
+        }
+    
+        .weather-body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin-block: 17px;
+        }
+    
+        .weather-body img {
+            width: 45%;
+        }
+    
+        .weather-box {
+            margin-block: 15px;
+            text-align: center;
+        }
+    
+        .weather-box .temperature {
+            font-size: 35px;
+            font-weight: 750;
+            position: relative;
+        }
+    
+        .weather-box .temperature sup {
+            font-size: 17px;
+            position: absolute;
+            font-weight: 550;
+        }
+    
+        .weather-box .description {
+            font-size: 17px;
+            font-weight: 550;
+            text-transform: capitalize;
+        }
+    
+        .weather-detalis {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            margin-top: 27px;
+        }
+    
+        .humidity,
+        .wind {
+            display: flex;
+            align-items: center;
+        }
+    
+        .humidity {
+            margin-left: 18px;
+        }
+    
+        .wind {
+            margin-right: 18px;
+        }
+    
+        .weather-detalis i {
+            font-size: 33px;
+        }
+    
+        .weather-detalis .text {
+            margin-left: 9px;
+            font-size: 15px;
+        }
+    
+        .weather-detalis span {
+            font-size: 18px;
+            font-weight: 650;
+        }
+    
+        .location-not-found {
+            margin-top: 20px;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+    
+        .location-not-found h1 {
+            font-size: 20px;
+            color: #6b6b6b;
+            margin-block-end: 15px;
+        }
+    
+        .location-not-found img {
+            width: 80%;
+        }
     }
-    .container{
-    width: 335px;
-    height: 85px;
-    background-color: #fff;
-    border-radius: 12px;
-    padding: 28px;
-}
-.search-box{
-    width: 100%;
-    height: 30px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.search-box input{
-    width: 84%;
-    font-size: 17px;
-    text-transform: capitalize;
-    color: #000;
-    background-color: #e6f5fb;
-    padding: 12px 16px;
-    border-radius: 14px;
-
-}
-.search-box  button{
-    width: 46px;
-    height: 46px;
-    margin-right: -14px;
-    background-color: #e6f5fb;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 20px;
-}
-.weather-body {
-    display: none;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-block: 17px;
-}
-.weather-body img{
-    width: 45%;
-}
-.weather-box{
-    margin-block: 15px;
-    text-align: center;
-}
-.weather-box .temperature{
-    font-size: 35px;
-    font-weight: 750;
-    position: relative;
-}
-.weather-box .temperature sup{
-    font-size: 17px;
-    position: absolute;
-    font-weight: 550;
-}
-.weather-box .description{
-    font-size: 17px;
-    font-weight: 550;
-    text-transform: capitalize;
-}
-.weather-detalis{
-    width:100%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 27px;
-}
-.humidity, .wind{
-    display: flex;
-    align-items: center;
-}
-.humidity{
-    margin-left: 18px;
-}
-.wind{
-    margin-right: 18px;
-}
-.weather-detalis i{
-    font-size: 33px;
-}
-.weather-detalis .text{
-    margin-left: 9px;
-    font-size: 15px;
-}
-.weather-detalis span{
-    font-size: 18px;
-    font-weight: 650;
-}
-.location-not-found{
-    margin-top: 20px;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.location-not-found h1{
-    font-size: 20px;
-    color:#6b6b6b ;
-    margin-block-end: 15px;
-}
-.location-not-found img{
-    width: 80%;
-}
-
-
-}
+    
