--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ body{
         }
     
         .weather-body {
-            display: flex;
+            display: none;
             justify-content: center;
             align-items: center;
             flex-direction: column;
