--- a/style.css
+++ b/style.css
@@ -3,33 +3,22 @@
     --bg-color: #f2f3f7;
     --button-bg-color: #f2f3f7;
     --button-shadow:
-      -6px -6px 8px rgba(255, 255, 255, 0.9),
-      5px 5px 8px rgba(198, 189, 189, 0.25);
-  }
-  .light {
+        -6px -6px 8px rgba(255, 255, 255, 0.9),
+        5px 5px 8px rgba(198, 189, 189, 0.25);
+}
+
+.light {
     --font-color: #222;
     --bg-color: #f2f3f7;
     --button-bg-color: #f2f3f7;
     --toggle-color: rgb(60, 59, 59);
     --switch-bg-color: rgb(105, 103, 103);
+    --btn-bg-colors: #f2f3f7;
     --button-shadow:
-      -6px -6px 8px rgba(255, 255, 255, 0.9),
-      5px 5px 8px rgba(198, 189, 189, 0.25);
-  }
-  
-  .dark {
-    --font-color: #fff;
-    --bg-color: #181818a3;
-    --button-bg-color: #727272;
-    --toggle-color: rgb(180, 179, 179);
-    --switch-bg-color: gray;
-    --button-shadow:
-      -2px -2px 4px rgba(255, 255, 255, 0.05),
-      0 0 10px 10px rgba(255, 255, 255, 0.005),
-      2px 2px 8px rgba(60, 60, 60, 0.1);
-  }
-  
-*{
+        -6px -6px 8px rgba(255, 255, 255, 0.9),
+        5px 5px 8px rgba(198, 189, 189, 0.25);
+}
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -37,22 +26,25 @@
     outline: none;
     font-family: sans-serif;
 }
-body{
+
+body {
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--bg-color);
 }
-.container{
+
+.container {
     width: 400px;
     height: min-content;
     background-color: var(--bg-color);
-    box-shadow: var(--button-shadow);   
-     border-radius: 12px;
+    box-shadow: var(--button-shadow);
+    border-radius: 12px;
     padding: 28px;
 }
-.search-box{
+
+.search-box {
     width: 90%;
     height: min-content;
     /* background-color:  #e6f5fb; */
@@ -63,7 +55,8 @@ body{
     justify-content: space-around;
     align-items: center;
 }
-.search-box input{
+
+.search-box input {
     width: 84%;
     font-size: 20px;
     text-transform: capitalize;
@@ -73,24 +66,28 @@ body{
     padding: 12px 16px;
     border-radius: 14px;
 }
-.search-box  input::placeholder{
+
+.search-box input::placeholder {
     color: var(--font-colors);
 }
-.search-box  button{
+
+.search-box button {
     width: 46px;
     height: 46px;
     margin-left: 20PX;
-    background-color: var(--button-bg-color);
+    background-color: var(--btn-bg-colors);
     box-shadow: var(--button-shadow);
     border-radius: 50%;
     cursor: pointer;
     font-size: 20px;
 }
-.search-box button:hover{
+
+.search-box button:hover {
     color: #fff;
     background-color: #ababab;
-    
+
 }
+
 .weather-body {
     display: none;
     justify-content: center;
@@ -98,77 +95,91 @@ body{
     flex-direction: column;
     margin-block: 20px;
     border-radius: 10PX;
-   height: 425px;
+    height: 425px;
     background-color: var(--bg-color);
     box-shadow: var(--button-shadow);
 }
-.weather-body img{
+
+.weather-body img {
     width: 60%;
 }
-.weather-box{
+
+.weather-box {
     margin-block: 20px;
     text-align: center;
 }
-.weather-box .temperature{
+
+.weather-box .temperature {
     font-size: 40px;
     font-weight: 800;
     position: relative;
     color: var(--font-color);
 }
-.weather-box .temperature sup{
+
+.weather-box .temperature sup {
     font-size: 20px;
     position: absolute;
     font-weight: 600;
 }
-.weather-box .description{
+
+.weather-box .description {
     font-size: 20px;
     font-weight: 600;
     text-transform: capitalize;
     color: var(--font-color);
 }
-.weather-detalis{
-    width:100%;
+
+.weather-detalis {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
 }
-.humidity, .wind{
+
+.humidity,
+.wind {
     display: flex;
     align-items: center;
     color: var(--font-color);
 }
-.humidity{
+
+.humidity {
     max-width: 250px;
-  max-height: 70px;
-  border-radius: 10px;
+    max-height: 70px;
+    border-radius: 10px;
     margin-left: 40px;
-    margin-top:-30px ;
+    margin-top: -30px;
     background-color: var(--bg-color);
     box-shadow: var(--button-shadow);
 }
-.wind{
+
+.wind {
     margin-right: 20px;
     max-width: 200px;
     max-height: 70px;
     border-radius: 10px;
-      margin-left: 40px;
-      margin-top:-30px ;
-      background-color: var(--bg-color);
-      box-shadow: var(--button-shadow);
-  
+    margin-left: 40px;
+    margin-top: -30px;
+    background-color: var(--bg-color);
+    box-shadow: var(--button-shadow);
+
 }
-.weather-detalis i{
+
+.weather-detalis i {
     font-size: 36px;
 }
-.weather-detalis .text{
+
+.weather-detalis .text {
     margin-left: 10px;
     font-size: 16px;
 }
-.weather-detalis span{
+
+.weather-detalis span {
     font-size: 17px;
     font-weight: 700;
 }
-.location-not-found{
+
+.location-not-found {
     margin-top: 20px;
     display: none;
     justify-content: center;
@@ -179,205 +190,160 @@ body{
     border-radius: 10px;
 
 }
-.location-not-found h1{
+
+.location-not-found h1 {
     font-size: 20px;
-    color:var(--font-color) ;
+    color: var(--font-color);
     margin-block-end: 15px;
     margin-top: 20px;
 }
-.location-not-found img{
+
+.location-not-found img {
     width: 80%;
 }
-
-
-.calendar-footer {
-    padding: 10px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: var(--bg-color);
-    box-shadow: var(--button-shadow);
-    max-width: 180px;
-    width: 100%;
-    border-radius: 30px;
-    margin-left: 160px;
-    margin-top: 30px;
-}
-
-.toggle {
-    display: flex;
-}
-.toggle span {
-    margin-right: 10px;
-    color: var(--font-color);
-}
-
-.dark-mode-switch {
-    position: relative;
-    width: 48px;
-    height: 25px;
-    border-radius: 14px;
-    background-color:var(--switch-bg-color);
-    cursor: pointer;
-}
-
-.dark-mode-switch-ident {
-    width: 21px;
-    height: 21px;
-    border-radius: 50%;
-    background-color: var(--toggle-color);
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    transition: left 0.2s ease-in-out;
-}
-
-body.dark .dark-mode-switch .dark-mode-switch-ident {
-    top: 2px;
-    left: calc(2px + 50%);
-}
-
-
-    @media only screen and (max-width: 600px) {
-        body {
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color:  #cecece;
-        }
-    
-        .container {
-            width: 90%; 
-            max-width: 400px; 
-            background-color: var(--bg-color);
-            box-shadow: -2px -2px 4px 0px #ffffff,50px 50px 50px 0px rgba(198, 189, 189, 0.25);
-            border-radius: 12px;
-            padding: 20px; 
-        }
-    
-        .search-box {
-            width: 100%;
-            height: min-content;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-        }
-    
-        .search-box input {
-            width: 80%; 
-            font-size: 17px;
-            text-transform: capitalize;
-            color: #000;
-             background-color: var(--bg-color);
-            box-shadow: -2px -2px 4px 0px #ffffff,50px 50px 50px 0px rgba(198, 189, 189, 0.25);
-            padding: 12px 16px;
-            border-radius: 14px;
-        }
-    
-        .search-box button {
-            width: 40px; 
-            height: 40px;
+@media only screen and (max-width: 600px) {
+    body {
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background-color: var(--bg-color);
-    box-shadow: -2px -2px 4px 0px #ffffff,50px 50px 50px 0px rgba(198, 189, 189, 0.25);
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 20px;
-            margin-right: -14px; 
-        }
-        .search-box button:hover{
-            color: #fff;
-            background-color: #ababab;
-            
-        }
-    
-        .weather-body {
-            display: none;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            margin-block: 20px;
-            height:350px;
-        }
-    
-        .weather-body img {
-            width: 45%;
-        }
-    
-        .weather-box {
-            margin-block: 15px;
-            text-align: center;
-        }
-    
-        .weather-box .temperature {
-            font-size: 35px;
-            font-weight: 750;
-            position: relative;
-        }
-    
-        .weather-box .temperature sup {
-            font-size: 17px;
-            position: absolute;
-            font-weight: 550;
-        }
-    
-        .weather-box .description {
-            font-size: 17px;
-            font-weight: 550;
-            text-transform: capitalize;
-        }
-    
-        .weather-detalis {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            margin-top: 27px;
-        }
-    
-        .humidity,
-        .wind {
-            display: flex;
-            align-items: center;
-        }
-    
-        .humidity {
-            margin-left: 18px;
-        }
-    
-        .wind {
-            margin-right: 18px;
-        }
-    
-        .weather-detalis i {
-            font-size: 33px;
-        }
-    
-        .weather-detalis .text {
-            margin-left: 9px;
-            font-size: 15px;
-        }
-    
-        .weather-detalis span {
-            font-size: 18px;
-            font-weight: 650;
-        }
-    
-        .location-not-found {
-            margin-top: 20px;
-            display: none;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-    
-        .location-not-found h1 {
-            font-size: 20px;
-            color: #6b6b6b;
-            margin-block-end: 15px;
-        }
-    
-        .location-not-found img {
-            width: 80%;
-        }
     }
-    
+
+    .container {
+        width: 90%;
+        max-width: 400px;
+        background-color: var(--bg-color);
+        box-shadow: -2px -2px 4px 0px #ffffff, 50px 50px 50px 0px rgba(198, 189, 189, 0.25);
+        border-radius: 12px;
+        padding: 20px;
+    }
+
+    .search-box {
+        width: 100%;
+        height: min-content;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .search-box input {
+        width: 80%;
+        font-size: 17px;
+        text-transform: capitalize;
+        color: #000;
+        background-color: var(--bg-color);
+        box-shadow: -2px -2px 4px 0px #ffffff, 50px 50px 50px 0px rgba(198, 189, 189, 0.25);
+        padding: 12px 16px;
+        border-radius: 14px;
+    }
+
+    .search-box button {
+        width: 40px;
+        height: 40px;
+        background-color: #f2f3f7;
+        box-shadow: -2px -2px 4px 0px #ffffff, 50px 50px 50px 0px rgba(198, 189, 189, 0.25);
+        border-radius: 50%;
+        cursor: pointer;
+        font-size: 20px;
+        margin-right: 5px;
+        
+    }
+
+    .search-box button:hover {
+        color: #fff;
+        background-color: #ababab;
+
+    }
+
+    .weather-body {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-block: 20px;
+        height: 350px;
+    }
+
+    .weather-body img {
+        width: 45%;
+    }
+
+    .weather-box {
+        margin-block: 15px;
+        text-align: center;
+    }
+
+    .weather-box .temperature {
+        font-size: 35px;
+        font-weight: 750;
+        position: relative;
+    }
+
+    .weather-box .temperature sup {
+        font-size: 17px;
+        position: absolute;
+        font-weight: 550;
+    }
+
+    .weather-box .description {
+        font-size: 17px;
+        font-weight: 550;
+        text-transform: capitalize;
+    }
+
+    .weather-detalis {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 27px;
+    }
+
+    .humidity,
+    .wind {
+        display: flex;
+        align-items: center;
+    }
+
+    .humidity {
+        margin-left: 18px;
+    }
+
+    .wind {
+        margin-right: 18px;
+    }
+
+    .weather-detalis i {
+        font-size: 33px;
+    }
+
+    .weather-detalis .text {
+        margin-left: 9px;
+        font-size: 15px;
+    }
+
+    .weather-detalis span {
+        font-size: 18px;
+        font-weight: 650;
+    }
+
+    .location-not-found {
+        margin-top: 20px;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .location-not-found h1 {
+        font-size: 20px;
+        color: #6b6b6b;
+        margin-block-end: 15px;
+    }
+
+    .location-not-found img {
+        width: 80%;
+    }
+
+   
+}
